Fixed remove bug

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         queue.push(() => {
             background.removeChild(character);
             character.destroy({texture: true, baseTexture: true});
+            console.log('destroy ' + usr);
             players.delete(usr);
         });
     });
