--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Wani4ka Lands</title>
 
 </head>
 <script src="/storage/js/pixi.min.js"></script>
