--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 <script src="/storage/js/pixi.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <body>
-<div id="game" style="position:absolute; width:765px; height:491px; left:50%; top:50%; margin-left:-382.5px; margin-top:-245.5px;"></div>
+<div id="game" style="position:absolute; width:765px; height:491px; left:50%; top:50%; margin-left:-382.5px; margin-top:-245.5px; z-index:1"></div>
+<div style="background-color:cadetblue; margin-top: -700px; z-index:2">
+    <input type="text" id="chat" maxlength="128">
+</div>
 <script type="text/javascript">
 
     const socket = new io();
+
+    document.getElementById('chat').onsubmit = () => {
+        socket.emit('chat', document.getElementById('chat').value);
+        document.getElementById('chat').value = '';
+    };
 
     let app = new PIXI.Application({width: 765, height: 491});
     let btexture = PIXI.Texture.fromImage('/storage/png/DiscoLocation.png');
@@ -39,6 +47,10 @@
             background.addChild(aackground);
             players.set(usr.uid, character);
         });
+    });
+
+    socket.on('chat', (msg) => {
+        alert(msg);
     });
 
     const queue = [];
