--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="game" style="position:absolute; width:765px; height:491px; left:50%; top:50%; margin-left:-382.5px; margin-top:-245.5px; z-index:1; background: black"></div>
     <div style="position:absolute; background:red; width: 765px; left:50%; top:50%; margin-left:-382.5px; margin-top: 216px; height: 30px; z-index:2">
-        <input type="text" id="chat" style="height: 30px; width: 100%" maxlength="128">
+        <input type="text" id="chat" placeholder="Введите Ваше сообщение и нажмите Enter, чтобы отправить..." style="height: 30px; width: 100%" maxlength="128">
     </div>
 <script type="text/javascript">
 
