--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     <div id="game" style="position:absolute; width:765px; height:491px; left:50%; top:50%; margin-left:-382.5px; margin-top:-245.5px; z-index:1; background: black"></div>
     <div style="position:absolute; background:red; width: 765px; left:50%; top:50%; margin-left:-382.5px; margin-top: 216px; height: 30px; z-index:2">
-        <input type="text" id="chat" placeholder="Введите Ваше сообщение и нажмите Enter, чтобы отправить..." style="height: 30px; width: 100%" maxlength="128">
+        <input type="text" id="chat" placeholder="Введите Ваше сообщение и нажмите Enter, чтобы отправить..." style="height: 30px; width: 100%;-webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;" maxlength="128">
     </div>
 <script type="text/javascript">
 
     const socket = new io();
 
     let app = new PIXI.Application({width: 765, height: 491});
-    let btexture = PIXI.Texture.fromImage('/storage/png/DiscoLocation.png');
+    let btexture = PIXI.Texture.fromImage('/storage/png/YardLocation.png');
     let background = new PIXI.Sprite(btexture);
-    let atexture = PIXI.Texture.fromImage('/storage/png/DiscoLocationTop.png');
-    let aackground = new PIXI.Sprite(atexture);
+    //let atexture = PIXI.Texture.fromImage('/storage/png/DiscoLocationTop.png');
+    //let aackground = new PIXI.Sprite(atexture);
     app.stage.addChild(background);
-    background.addChild(aackground);
+    //background.addChild(aackground);
     background.interactive = true;
     background.on('pointerdown', onClick);
     document.getElementById("game").appendChild(app.view);
@@ -37,9 +42,9 @@
             character.anchor.set(0.5);
             character.x = usr.info.x;
             character.y = usr.info.y;
-            background.removeChild(aackground);
+           // background.removeChild(aackground);
             background.addChild(character);
-            background.addChild(aackground);
+            //background.addChild(aackground);
             players.set(usr.uid, character);
         });
     });
