Began VK integration.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             document.getElementById('chat').value = '';
         }
     });
+    alert(window.location.href);
 </script>
 </body>
 </html>
