Fixed VK-detection bug.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     const socket = new io();
 
     let app = new PIXI.Application({width: 765, height: 491, backgroundColor: 0xffffff});
+    let background;
+    let aackground;
 
     socket.on('auth', () => {
         let btexture = PIXI.Texture.fromImage('/storage/png/YardLocation.png');
-        let background = new PIXI.Sprite(btexture);
+        background = new PIXI.Sprite(btexture);
         let atexture = PIXI.Texture.fromImage('/storage/png/YardLocationTop.png');
-        let aackground = new PIXI.Sprite(atexture);
+        aackground = new PIXI.Sprite(atexture);
         app.stage.addChild(background);
         background.addChild(aackground);
         background.interactive = true;
