Playing with size & position values

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             character.anchor.set(0.5);
             character.x = usr.info.x;
             character.y = usr.info.y;
-            let text = new PIXI.Text(usr.uid, new PIXI.TextStyle({fonstSize: 6}));
+            let text = new PIXI.Text(usr.uid, new PIXI.TextStyle({fontSize: 6}));
             background.removeChild(aackground);
             background.addChild(character);
             character.addChild(text);
