Recoded auth system.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             background.removeChild(aackground);
             background.addChild(character);
             character.addChild(text);
+            text.anchor.set(0.5, 0.5);
             text.x = -15;
             text.y = 15;
             background.addChild(aackground);
