Playing with size & position values

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             background.addChild(character);
             character.addChild(text);
             text.anchor.set(0.5, 0.5);
+            text.y = -30
             background.addChild(aackground);
             players.set(usr.uid, character);
         });
